--- a/clase2/src/main/resources/application.yaml
+++ b/clase2/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: clase2
   datasource:
-    url: jdbc:mysql://localhost:3306/mydatabase
+    url: jdbc:mysql://localhost:3306/BD_Examen1
     username: ${username}
     password: ${password}
     driver-class-name: com.mysql.cj.jdbc.Driver
